@@ -1,5 +1,0 @@
-package cryptoBot;
-
-public class Scheduler {
-
-}
