@@ -15,9 +15,9 @@ public class TestGeneral {
 		System.out.println(prop.getProperty("bot_token"));
 		
 		assertEquals("Waarschijnlijk heb je de testbot token gebruikt!", "429491716:AAHJIRsPvRkRzpYRIdznxZEXgIJtYZm77M0", prop.getProperty("bot_token"));
+		assertEquals("Waarschijnlijk heb je de testbot username gebruikt!", "geenGezeikIedereenRijkBot", prop.getProperty("bot_username"));
 		
 	}
-	
 	
 
 }
