@@ -1,14 +1,14 @@
 Application:        cryptoBot
 
 Version:            v0.2
-Last update on:     30-09-2017
+Last update on:     15-10-2017
 Last updates by:    Anton (@Kolkos)
 
 ------------
 
 Changes
 Version:            v0.2
-Date                30-09-2017
+Date                15-10-2017
 Changes:
   - Added automatic request job:
     * The bot now request the status of the portfolio every hour;
@@ -19,6 +19,7 @@ Changes:
   - Added the /version command (show this text);
   - Added a shortcut to request the portfolio since the last request
   - Added logging
+  - Added deposit functionality
 Fixes:
   - Edited regex to only trigger on the word bor (not as part of a word)
     
